--- a/SQL Banking Simulation.xcodeproj/xcshareddata/xcschemes/SQL Banking Simulation.xcscheme
+++ b/SQL Banking Simulation.xcodeproj/xcshareddata/xcschemes/SQL Banking Simulation.xcscheme
@@ -36,7 +36,7 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       launchStyle = "0"
       useCustomWorkingDirectory = "YES"
-      customWorkingDirectory = "/Users/timleflem/Code/C++/GitHub Projects/SQL Banking Simulation"
+      customWorkingDirectory = "$(SRCROOT)/"
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
